--- a/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
+    <excludeButtons>DataDotComClean</excludeButtons>
+    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -439,13 +441,6 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <fields>Type_Of_Project__c</fields>
-        <fields>EMS_TM_StartDate__c</fields>
-        <fields>EMS_TM_Status__c</fields>
-        <relatedList>EMS_TM_Project__c.Project_Manager__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
         <fields>EMS_TM_ProjectName_Asgn__c</fields>
         <fields>EMS_TM_Status_Asgn__c</fields>
         <fields>EMS_TM_Billable__c</fields>
@@ -503,6 +498,7 @@
         <relatedList>EMS_EM_Benefits__c.EMS_EM_Nominee__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>NAME</fields>
         <fields>Beneficiary_Account_Number__c</fields>
         <fields>Bank_Name__c</fields>
         <fields>Branch__c</fields>
