Deploy changes to QA

--- a/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.css
+++ b/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.css
@@ -13,3 +13,12 @@
 h1 {
     font-size: 20px;
   }
+
+  .removeImage {
+    border-radius: 50%;
+    padding: 0px 4px;
+    margin: 8px 2px 8px 8px;
+    color: #fff;
+    background-color: #9f201b;
+    cursor: pointer;
+}
