--- a/force-app/main/default/layouts/EMS_EM_Benefits__c-Benefits Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/EMS_EM_Benefits__c-Benefits Layout.layout-meta.xml
@@ -15,6 +15,10 @@
                 <behavior>Required</behavior>
                 <field>EMS_EM_Valid_From__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>EMS_EM_Membership_No__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -58,7 +62,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h5e00000ClgFY</masterLabel>
+        <masterLabel>00h52000003VcEL</masterLabel>
         <sizeX>3</sizeX>
         <sizeY>1</sizeY>
         <summaryLayoutItems>
