--- a/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>DataDotComClean</excludeButtons>
-    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -480,7 +478,7 @@
         <relatedList>Goal__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
-        <fields>OBJECT_ID</fields>
+        <fields>NAME</fields>
         <fields>Type__c</fields>
         <fields>Certification_Name__c</fields>
         <fields>Skill__c</fields>
@@ -496,10 +494,11 @@
         <fields>Family_Member_Name__c</fields>
         <fields>Relationships__c</fields>
         <fields>Is_It_Emergency_Contact__c</fields>
+        <fields>Is_It_Dependent_Contact__c</fields>
         <relatedList>Family_Information__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
-        <fields>OBJECT_ID</fields>
+        <fields>NAME</fields>
         <fields>Type__c</fields>
         <fields>Amount__c</fields>
         <fields>EMS_EM_Valid_From__c</fields>
@@ -522,10 +521,15 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
+        <fields>Expense_Amount__c</fields>
+        <fields>Status__c</fields>
         <relatedList>Expense__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
+        <fields>Award_Type__c</fields>
+        <fields>Comments__c</fields>
+        <fields>Fiscal_Year__c</fields>
         <relatedList>Reward_And_Recognition__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
