--- a/force-app/main/default/layouts/Off_boarding_Request__c-Off boarding Request Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Off_boarding_Request__c-Off boarding Request Layout.layout-meta.xml
@@ -110,4 +110,10 @@
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
+    <summaryLayout>
+        <masterLabel>00h52000003xhH3</masterLabel>
+        <sizeX>4</sizeX>
+        <sizeY>0</sizeY>
+        <summaryLayoutStyle>Default</summaryLayoutStyle>
+    </summaryLayout>
 </Layout>
