--- a/force-app/main/default/layouts/EMS_TM_Assignment__c-Assignment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/EMS_TM_Assignment__c-Assignment Layout.layout-meta.xml
@@ -12,21 +12,21 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Readonly</behavior>
                 <field>EMS_TM_ProjectName_Asgn__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Readonly</behavior>
                 <field>EMS_TM_AssignedAs__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>EMS_TM_Status_Asgn__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Readonly</behavior>
                 <field>EMS_TM_EmployeeName__c</field>
             </layoutItems>
             <layoutItems>
